--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@
 # in the templates via {{ site.myvariable }}.
 title: Hermit's Jekyll
 #email: your-email@example.com
-#description: >- # this means to ignore newlines until "baseurl:"
-#  Don't Panic
+description: >- # this means to ignore newlines until "baseurl:"
+  Don't Panic
 #  Write an awesome description for your new site here. You can edit this
 #  line in _config.yml. It will appear in your document head meta (for
 #  Google search results) and in your feed.xml site description.
